fix: 웹 신청 컴포넌트 position: sticky로 변경 및 모달 z-index 오류 해결

--- a/src/components/AlertModal.scss
+++ b/src/components/AlertModal.scss
@@ -43,7 +43,6 @@
     }
 
     .button {
-      all: unset;
       margin: 0 5px;
       padding: 5px 10px;
       border: none;
