--- a/src/components/ProgramDetail/ApplyAside/ApplyAside.scss
+++ b/src/components/ProgramDetail/ApplyAside/ApplyAside.scss
@@ -12,16 +12,37 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+
+  .modal {
+    width: 500px;
+    background-color: white;
+    border-radius: 0.75rem;
+    overflow: hidden;
+    cursor: auto;
+
+    .top {
+      padding: 2rem;
+    }
+
+    .next-button {
+      width: 100%;
+      color: white;
+      background-color: #6963f6;
+      padding: 0.75rem 0;
+
+      &.disabled {
+        background-color: #a5a1fa;
+        cursor: auto;
+      }
+    }
+  }
 }
 
 .apply-aside-content {
-  position: fixed;
   display: none;
   width: 350px;
-  z-index: 100;
 
   .content {
-    z-index: 0;
     border-radius: 0.75rem;
     background: white;
     box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.08);
