--- a/src/components/ProgramDetail/ApplyAside/index.scss
+++ b/src/components/ProgramDetail/ApplyAside/index.scss
@@ -5,32 +5,10 @@
   width: 0px;
 
   @media screen and (min-width: $screen-lg) {
+    position: sticky;
+    top: 7rem;
     display: block;
     width: 350px;
-  }
-
-  .modal {
-    width: 500px;
-    background-color: white;
-    border-radius: 0.75rem;
-    overflow: hidden;
-    cursor: auto;
-
-    .top {
-      padding: 2rem;
-    }
-
-    .next-button {
-      width: 100%;
-      color: white;
-      background-color: #6963f6;
-      padding: 0.75rem 0;
-
-      &.disabled {
-        background-color: #a5a1fa;
-        cursor: auto;
-      }
-    }
   }
 
   .scrollable-box {
@@ -47,27 +25,31 @@
     }
   }
 
-  h3 {
-    font-size: 0.875rem;
-  }
+  .apply-aside-content {
+    .aside-inner-content {
+      h3 {
+        font-size: 0.875rem;
+      }
 
-  h2 {
-    font-size: 1.375rem;
-    font-weight: 500;
-  }
+      h2 {
+        font-size: 1.375rem;
+        font-weight: 500;
+      }
 
-  button {
-    border-radius: 0.25rem;
-    background: #6963f6;
-    color: white;
-    width: 100%;
-    padding: 0.75rem 0;
-    font-size: 0.75rem;
-    font-weight: 500;
+      button {
+        border-radius: 0.25rem;
+        background: #6963f6;
+        color: white;
+        width: 100%;
+        padding: 0.75rem 0;
+        font-size: 0.75rem;
+        font-weight: 500;
 
-    &.disabled {
-      background-color: #a5a1fa;
-      cursor: auto;
+        &.disabled {
+          background-color: #a5a1fa;
+          cursor: auto;
+        }
+      }
     }
   }
 }
